# minecraft_mod_details_to_csv

./: Cargo.toml  Config.toml  README.md  output.csv
src/: main.rs
