[package]
name = "minecraft_mod_details_to_csv"
version = "0.1.0"
edition = "2021"
authors = ["lightbender255"]
readme="README.md"
keywords = ["minecraft","modding","fabric","csv"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.104"
config = "~0.13"